@@ -1,4 +1,4 @@
-# Sample ResourceBundle properties file, license GNU/GPL=
+# NOTE: Messages are translated by GOOGLE from the English language. Sample ResourceBundle properties file, license GNU/GPL=
 .BrowserDialog.SelectAnInternetBrowser=Selezionare un browser per Internet
 .Button.About=Circa
 .Button.Cancel=Annulla
@@ -134,3 +134,4 @@ tab.Type=Tipo digitare
 tab.Value=Rapporto
 param.AutomaticSortingByTime=Automatic sorting of the Event. The feature is applied if you change a time value in an event table.
 tab.Index=#
+rpt.DetailInTableProj=Detail report grouped by project
